Added project name in build.xml

--- a/build.xml
+++ b/build.xml
@@ -1,4 +1,4 @@
-<project>
+<project  name="xstep" default="run" basedir=".">
 	  <property name="lib.dir" value="lib"/>
 	  <property name="files.dir" value="files"/>
  	  
